--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -34,6 +34,11 @@ spring:
     openfeign:
       circuitbreaker:
         enabled: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: "http://localhost:7080/realms/master/protocol/openid-connect/certs"
 
 management:
   endpoints:
