--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,13 +1,29 @@
 services:
 
-  rabbit:
-    image: rabbitmq:4.0-management
-    hostname: rabbitmq
+  kafka:
+    image: apache/kafka:4.1.1
+    hostname: kafka
+    container_name: kafka
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_NODE_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:29093
+      KAFKA_LISTENERS: PLAINTEXT://kafka:29092,CONTROLLER://kafka:29093,PLAINTEXT_HOST://kafka:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
+      CLUSTER_ID: MkU3OEVBNTcwNTJENDM2Qk
     healthcheck:
-      test: rabbitmq-diagnostics check_port_connectivity
+      test: [ "CMD-SHELL", "nc -z kafka 9092 || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 10
@@ -15,6 +31,22 @@ services:
     extends:
       file: common-config.yml
       service: network-deploy-service
+
+#  rabbit:
+#    image: rabbitmq:4.0-management
+#    hostname: rabbitmq
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
+#    healthcheck:
+#      test: rabbitmq-diagnostics check_port_connectivity
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+#      start_period: 5s
+#    extends:
+#      file: common-config.yml
+#      service: network-deploy-service
 
   keycloak:
     image: quay.io/keycloak/keycloak:26.4.7
@@ -275,7 +307,7 @@ services:
 #      service: microservice-db-config
 
   configserver:
-    image: "rohan7351/configserver:V8"
+    image: "rohan7351/configserver:V9"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -293,7 +325,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "rohan7351/eurekaserver:V8"
+    image: "rohan7351/eurekaserver:V9"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -314,7 +346,7 @@ services:
       OTEL_SERVICE_NAME: "eurekaserver"
 
   accounts:
-    image: "rohan7351/account:V8"
+    image: "rohan7351/account:V9"
     container_name: accounts-ms
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
@@ -329,19 +361,22 @@ services:
 #        condition: service_healthy
       eurekaserver:
         condition: service_healthy
-      rabbit:
+#      rabbit:
+#        condition: service_healthy
+      kafka:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "account"
       OTEL_SERVICE_NAME: "account"
-      SPRING_RABBITMQ_HOST: "rabbit"
+#      SPRING_RABBITMQ_HOST: "rabbit"
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
 #      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
 
   loans:
-    image: "rohan7351/loans:V8"
+    image: "rohan7351/loans:V9"
     container_name: loans-ms
     healthcheck:
       test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
@@ -366,7 +401,7 @@ services:
 
 
   cards:
-    image: "rohan7351/cards:V8"
+    image: "rohan7351/cards:V9"
     container_name: cards-ms
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
@@ -390,19 +425,19 @@ services:
       service: microservice-eurekaserver-config
       
   message:
-    image: "rohan7351/message:V8"
+    image: "rohan7351/message:V9"
     container_name: message-ms
     depends_on:
-      rabbit:
+      kafka:
         condition: service_healthy
     environment:
-      SPRING_RABBITMQ_HOST: "rabbit"
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
     extends:
       file: common-config.yml
       service: network-deploy-service
 
   gatewayserver:
-    image: "rohan7351/gatewayserver:V8"
+    image: "rohan7351/gatewayserver:V9"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
