--- a/docker-compose/qa/docker-compose.yml
+++ b/docker-compose/qa/docker-compose.yml
@@ -1,4 +1,53 @@
 services:
+
+  kafka:
+    image: apache/kafka:4.1.1
+    hostname: kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_NODE_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:29093
+      KAFKA_LISTENERS: PLAINTEXT://kafka:29092,CONTROLLER://kafka:29093,PLAINTEXT_HOST://kafka:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
+      CLUSTER_ID: MkU3OEVBNTcwNTJENDM2Qk
+    healthcheck:
+      test: [ "CMD-SHELL", "nc -z kafka 9092 || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
+  #  rabbit:
+  #    image: rabbitmq:4.0-management
+  #    hostname: rabbitmq
+  #    ports:
+  #      - "5672:5672"
+  #      - "15672:15672"
+  #    healthcheck:
+  #      test: rabbitmq-diagnostics check_port_connectivity
+  #      interval: 10s
+  #      timeout: 5s
+  #      retries: 10
+  #      start_period: 5s
+  #    extends:
+  #      file: common-config.yml
+  #      service: network-deploy-service
+
   keycloak:
     image: quay.io/keycloak/keycloak:26.4.7
     container_name: keycloak
@@ -227,38 +276,38 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
-#  accountsdb:
-#    container_name: accountsdb
-#    ports:
-#      - 3306:3306
-#    environment:
-#      MYSQL_DATABASE: accountsdb
-#    extends:
-#      file: common-config.yml
-#      service: microservice-db-config
+  #  accountsdb:
+  #    container_name: accountsdb
+  #    ports:
+  #      - 3306:3306
+  #    environment:
+  #      MYSQL_DATABASE: accountsdb
+  #    extends:
+  #      file: common-config.yml
+  #      service: microservice-db-config
 
-#  loansdb:
-#    container_name: loansdb
-#    ports:
-#      - 3307:3306
-#    environment:
-#      MYSQL_DATABASE: loansdb
-#    extends:
-#      file: common-config.yml
-#      service: microservice-db-config
+  #  loansdb:
+  #    container_name: loansdb
+  #    ports:
+  #      - 3307:3306
+  #    environment:
+  #      MYSQL_DATABASE: loansdb
+  #    extends:
+  #      file: common-config.yml
+  #      service: microservice-db-config
 
-#  cardsdb:
-#    container_name: cardsdb
-#    ports:
-#      - 3308:3306
-#    environment:
-#      MYSQL_DATABASE: cardsdb
-#    extends:
-#      file: common-config.yml
-#      service: microservice-db-config
+  #  cardsdb:
+  #    container_name: cardsdb
+  #    ports:
+  #      - 3308:3306
+  #    environment:
+  #      MYSQL_DATABASE: cardsdb
+  #    extends:
+  #      file: common-config.yml
+  #      service: microservice-db-config
 
   configserver:
-    image: "rohan7351/configserver:V7"
+    image: "rohan7351/configserver:V9"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -276,7 +325,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "rohan7351/eurekaserver:V7"
+    image: "rohan7351/eurekaserver:V9"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -297,7 +346,7 @@ services:
       OTEL_SERVICE_NAME: "eurekaserver"
 
   accounts:
-    image: "rohan7351/account:V7"
+    image: "rohan7351/account:V9"
     container_name: accounts-ms
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
@@ -308,20 +357,26 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
-#      accountsdb:
-#        condition: service_healthy
+      #      accountsdb:
+      #        condition: service_healthy
       eurekaserver:
+        condition: service_healthy
+      #      rabbit:
+      #        condition: service_healthy
+      kafka:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "account"
       OTEL_SERVICE_NAME: "account"
-#      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
+      #      SPRING_RABBITMQ_HOST: "rabbit"
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
+    #      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
 
   loans:
-    image: "rohan7351/loans:V7"
+    image: "rohan7351/loans:V9"
     container_name: loans-ms
     healthcheck:
       test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
@@ -332,21 +387,21 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
-#      loansdb:
-#        condition: service_healthy
+      #      loansdb:
+      #        condition: service_healthy
       eurekaserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
       OTEL_SERVICE_NAME: "loans"
-#      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
+    #      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
 
 
   cards:
-    image: "rohan7351/cards:V7"
+    image: "rohan7351/cards:V9"
     container_name: cards-ms
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
@@ -357,20 +412,32 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
-#      cardsdb:
-#        condition: service_healthy
+      #      cardsdb:
+      #        condition: service_healthy
       eurekaserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
       OTEL_SERVICE_NAME: "cards"
-#      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
+    #      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
     extends:
       file: common-config.yml
       service: microservice-eurekaserver-config
 
+  message:
+    image: "rohan7351/message:V9"
+    container_name: message-ms
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   gatewayserver:
-    image: "rohan7351/gatewayserver:V7"
+    image: "rohan7351/gatewayserver:V9"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
